fix(rjk):working on form

--- a/property-rental-main-app/src/app/components/contact-property/contact-property.component.html
+++ b/property-rental-main-app/src/app/components/contact-property/contact-property.component.html
@@ -33,5 +33,5 @@
   </div>
 </aside>
 
-<app-send-message></app-send-message>
-<app-request-tourform></app-request-tourform>
+<app-send-message [propertyInfo]="propertyHeading"></app-send-message>
+<app-request-tourform [propertyInfo]="propertyHeading"></app-request-tourform>
