--- a/property-rental-main-app/src/app/page/property-media-viewer/property-media-viewer.component.html
+++ b/property-rental-main-app/src/app/page/property-media-viewer/property-media-viewer.component.html
@@ -52,7 +52,7 @@
     </ul>
   
     <!-- Tab Content -->
-    <div class="tab-content bg-light rounded-lg shadow-sm p-3" id="myTabContent">
+    <div class="tab-content rounded-lg shadow-sm p-3" id="myTabContent">
       <div class="tab-pane fade show active" id="photo" role="tabpanel" aria-labelledby="photo-tab">
         <div class="carousel-container">
           <app-image-carousel [data]="propertyPhotos" [imageStyle]="propertyPhotosStyle"></app-image-carousel>
