fix(rjk):fix image carousel styling

--- a/property-rental-main-app/src/app/page/property-media-viewer/property-media-viewer.component.html
+++ b/property-rental-main-app/src/app/page/property-media-viewer/property-media-viewer.component.html
@@ -10,7 +10,7 @@
       <h1 class="fw-bold text-xl text-gray-800">{{propertyName}}</h1>
     </div>
     <div class="absolute right-4">
-      <button type="button" class="btn btn-outline-secondary rounded-pill px-4" routerLink="/propertydetails/"
+      <button type="button" class="btn btn-success rounded-pill px-4" routerLink="/propertydetails/"
         (click)="backToPreviwsPage()">
         Close
       </button>
