--- a/property-rental-main-app/src/styles.css
+++ b/property-rental-main-app/src/styles.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
+*{
+    padding: 0;
+    margin: 0;
+}
 body {
     background: #F8FAFC;
     /* D9EAFD
@@ -12,26 +15,3 @@ body {
     overflow-y: scroll;
     overflow-x: hidden;
 }
-/* h1{
-    font-family: "Bebas Neue", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-    letter-spacing: 2px;
-}
-p{
-    letter-spacing: 1px; 
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-}
-a{
-    font-family: "PT Serif", serif;
-    font-weight: 300;
-    font-style: normal;
-}
-li{
-    font-family: "Quattrocento Sans", sans-serif;
-    font-weight: 200;
-    font-style: normal;
-} */
