fix(rjk):working on property map view component

--- a/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
+++ b/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-    <app-sub-navbar></app-sub-navbar>
+    <!-- <app-sub-navbar></app-sub-navbar> -->
 </div>
 <div class="row">
-    <div class="col-sm-8">
-        <app-map></app-map>
+    <div >
+        <!-- <app-map></app-map> -->
     </div>
     <div class="col-sm-4">
         <app-show-property-cards></app-show-property-cards>
