--- a/property-rental-main-app/src/app/components/property-cards/property-cards.component.css
+++ b/property-rental-main-app/src/app/components/property-cards/property-cards.component.css
@@ -1,27 +1,18 @@
-/* .card-header{
-    background-color: #BCCCDC;
-}
-.card-b{
-    background-color: #D9EAFD;
-} */
- /* Property Card Container */
+
 .property-card {
     display: flex;
     flex-direction: column;
     border: 1px solid #ddd;
     border-radius: 10px;
     overflow: hidden;
-    width: 60vh;
+    width: 85vh;
     max-height: 35vh;
     background-color: #ffffff;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
   
-  .property-card:hover {
-    transform: scale(1.02);
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-  }
+
   
   /* Card Header */
   .card-header {
@@ -49,17 +40,12 @@
     height: 100%;
   }
   
-  
-  .card-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: transform 0.3s ease;
+  .card-image {
+    width: 50%;
+    overflow: hidden;
+    position: relative;
   }
-  
-  .card-image:hover img {
-    transform: scale(1.1);
-  }
+
   
   /* Card Info */
   .card-info {
@@ -88,12 +74,13 @@
   .contact-info {
     font-size: 0.875rem;
     color: #6c757d;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.3rem;
   }
   
   .contact-info {
     font-weight: bold;
     color: #007bff;
+    
   }
   
   /* Button */
