fix(rjk):price filter add on propertyMapView component

--- a/property-rental-main-app/src/app/components/appartment-data/appartment-data.component.html
+++ b/property-rental-main-app/src/app/components/appartment-data/appartment-data.component.html
@@ -7,7 +7,7 @@
       <h1 class="h1 fw-bold">{{ apartmentData.propertyName || "Not Available" }}</h1>
       <p class="mt-1 h6">{{ apartmentData.propertyLocation || "Not Available" }}</p>
       <div class="mt-2 h5 fw-bold text-secondary">
-        {{ apartmentData.propertyPrice || "Not Available" }}
+        {{ apartmentData.propertyPrice +" "+ "Lakh" || "Not Available"  }}
       </div>
       <div class="mt-1 text-muted">{{ apartmentData.propertyArea  || "Not Available"}}</div>
       <div class="d-flex gap-3 mt-4">
