fix(rjk):working on map

--- a/property-rental-main-app/src/app/components/map/map.component.html
+++ b/property-rental-main-app/src/app/components/map/map.component.html
@@ -1,1 +1,4 @@
-<google-map width="100vw" height="100vh" [center]="center" [zoom]="zoom" [options]="options"></google-map>
+<google-map [center]="position" [zoom]="zoom" height="70vh" width="100%">
+    <map-marker [position]="position"></map-marker>
+  </google-map>
+  
