--- a/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
+++ b/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
@@ -16,29 +16,16 @@
         <option value="highToLow">High to Low</option>
       </select>
     </div>
-    <!-- Filter by Area -->
+    <!-- Filter by Area/Size -->
     <div class="property-filter mb-6">
       <label class="block text-sm font-medium text-gray-800 mb-3">Filter by Area</label>
       <div class="space-y-2">
-        <div class="flex items-center">
-          <input type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
-          <span class="ml-2 text-gray-700">1RK</span>
-        </div>
-        <div class="flex items-center">
-          <input type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
-          <span class="ml-2 text-gray-700">1BHK</span>
-        </div>
-        <div class="flex items-center">
-          <input type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
-          <span class="ml-2 text-gray-700">2BHK</span>
-        </div>
-        <div class="flex items-center">
-          <input type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
-          <span class="ml-2 text-gray-700">3BHK</span>
+        <div class="flex items-center" *ngFor="let option of bhkOptions">
+          <input [(ngModel)]="option.checked" (change)="filterProperties()" type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
+          <span class="ml-2 text-gray-700">{{ option.label }}</span>
         </div>
       </div>
     </div>
-
 
     <div class="property-filter mb-6">
       <label class="block text-sm font-medium text-gray-800 mb-3">Type of Property</label>
@@ -93,9 +80,9 @@
   </div>
 
   <div class="left w-[70%] h-[95%] px-20">
-    <app-property-cards
-      *ngFor="let apartment of products|filterCards:searchText|paginate : { itemsPerPage: pageSize, currentPage }; let i = index"
-       [propertyCard]="apartment" [index]="i">
+    <app-property-cards 
+      *ngFor="let apartment of filteredProperties|filterCards:searchText|paginate : { itemsPerPage: pageSize, currentPage }; let i = index"
+       [propertyCard]="apartment" [index]="i" >
     </app-property-cards>
     <div class="border-top text-white d-md-flex justify-content-center align-items-center p-3 ">
       <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
