fix(rjk):add all filter on propery-map-views-component

--- a/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
+++ b/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
@@ -1,6 +1,6 @@
 <section class="container flex justify-center items-center px-10  h-full w-screen">
   <div class="right w-[30%]  md:w-[30%] md:h-[95%] bg-slate-200 rounded-lg p-6 shadow-md">
-    <!-- Search Bar -->
+    <!-- filtering data by Search Bar -->
     <div class="mb-6">
       <input [(ngModel)]="searchText"
         class="form-control w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
@@ -21,64 +21,49 @@
       <label class="block text-sm font-medium text-gray-800 mb-3">Filter by Area</label>
       <div class="space-y-2">
         <div class="flex items-center" *ngFor="let option of bhkOptions">
-          <input [(ngModel)]="option.checked" (change)="filterProperties()" type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
+          <input [(ngModel)]="option.checked" (change)="filterProperties('bhk',this.bhkOptions)" type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
           <span class="ml-2 text-gray-700">{{ option.label }}</span>
         </div>
       </div>
     </div>
 
+    <!-- Filter by Type of Property -->
     <div class="property-filter mb-6">
       <label class="block text-sm font-medium text-gray-800 mb-3">Type of Property</label>
       <div class="space-y-2">
-        <div class="flex items-center">
-          <input type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
-          <span class="ml-2 text-gray-700">Residential Apartment</span>
+        <div class="flex items-center"  *ngFor="let option of TypeofPropertysOptions">
+          <input  [(ngModel)]="option.checked" (change)="filterProperties('TypeofProperty',this.TypeofPropertysOptions)" type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
+          <span class="ml-2 text-gray-700">{{ option.label }}</span>
         </div>
-        <div class="flex items-center">
-          <input type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
-          <span class="ml-2 text-gray-700">Residential Land</span>
-        </div>
-        <div class="flex items-center">
-          <input type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
-          <span class="ml-2 text-gray-700">Studio Apartment</span>
-        </div>
+
       </div>
     </div>
 
+    <!-- Filter by Furnishing -->
     <div class="property-filter mb-6">
       <label class="block text-sm font-medium text-gray-800 mb-3">Furnishing</label>
       <div class="space-y-2">
-        <div class="flex items-center">
-          <input type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
-          <span class="ml-2 text-gray-700"> Semi</span>
-        </div>
-        <div class="flex items-center">
-          <input type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
-          <span class="ml-2 text-gray-700">Full</span>
-        </div>
-        <div class="flex items-center">
-          <input type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
-          <span class="ml-2 text-gray-700">None</span>
+        <div class="flex items-center" *ngFor="let option of FurnishingOptions">
+          <input [(ngModel)]="option.checked" (change)="filterProperties('Furnishing',this.FurnishingOptions)" type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
+          <span class="ml-2 text-gray-700"> {{ option.label }}</span>
         </div>
       </div>
     </div>
 
+    <!-- Filter by Parking -->
     <div class="property-filter mb-6">
       <label class="block text-sm font-medium text-gray-800 mb-3">Parking</label>
       <div class="space-y-2">
-        <div class="flex items-center">
-          <input type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
-          <span class="ml-2 text-gray-700"> 2 Wheeler</span>
-        </div>
-        <div class="flex items-center">
-          <input type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
-          <span class="ml-2 text-gray-700">4 Wheeler</span>
+        <div class="flex items-center" *ngFor="let option of ParkingOptions">
+          <input [(ngModel)]="option.checked" (change)="filterProperties('parking',this.ParkingOptions)" type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
+          <span class="ml-2 text-gray-700">{{ option.label }}</span>
         </div>
       </div>
     </div>
 
   </div>
 
+  <!-- Property Cards -->
   <div class="left w-[70%] h-[95%] px-20">
     <app-property-cards 
       *ngFor="let apartment of filteredProperties|filterCards:searchText|paginate : { itemsPerPage: pageSize, currentPage }; let i = index"
